<resources>
    <string name="app_name">Emargency Service</string>

    <!--Splash and MainActivity-->
    <string name="fire_service">Fire Service</string>
    <string name="ambulance">Ambulance</string>
    <string name="police_station">Police Station</string>
    <string name="splash_display">Bangladesh \n Emergency Service</string>

    <!--Admin activity-->
    <string name="user_name">User name</string>
    <string name="password">Password</string>

    <!--Create Activity-->
    <string name="title_ambulance">Create Ambulance Information</string>
    <string name="title_fire_service">Create Fire Service Information</string>
    <string name="title_police_station">Create Police Information</string>

    <string name="org_name">Name of Organization</string>
    <string name="area">Select area</string>
    <string name="hospital_name">Hospital</string>
    <string name="address">Address</string>
    <string name="phone_no">Phone Number</string>
    <string name="phone_no_oc">Phone Number of OC</string>
    <string name="btn_save">Save</string>

</resources>
