<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.kichukkhon.emergencyservice.Create.CreateAmbulance">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_ambulance"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:text="@string/area"
        android:layout_gravity="center"
        android:textSize="@dimen/tv_text_size"/>

    <Spinner
        android:id="@+id/spinnerArea"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_bottom"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/txtOrgName"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/org_name"
            android:layout_gravity="center"
            android:textSize="@dimen/et_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:hint="@string/address"
            android:layout_gravity="center"
            android:textSize="@dimen/et_text_size"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/txtPhoneNo"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_no"
            android:layout_gravity="center"
            android:textSize="@dimen/et_text_size"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSaveAmbulance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_save"
        android:textSize="@dimen/et_text_size"
        android:onClick="btnSaveAmbulance"/>
</LinearLayout>
